syntax = "proto3";

option go_package = "common/model";

package model;

import "google/protobuf/Empty.proto";

service Garages {
  rpc List(GarageUserID) returns (GarageList) {}
  rpc Add(GarageAndUserID) returns (google.protobuf.Empty) {}
}

message GarageUserID {
  string userID = 1;
}

message GarageAndUserID {
  string userID = 1;
  Garage garage = 2;
}

message GarageCoordinate {
  float latitude = 1;
  float longitude = 2;
}

message Garage {
  string id = 1;
  string name = 2;
  GarageCoordinate coordinate = 3;
}

message GarageList {
  repeated Garage list = 1;
}

message GarageListByUser {
  map<string, GarageList> list = 1;
}